--- a/app/src/main/res/layout/activity_calendar_new_event.xml
+++ b/app/src/main/res/layout/activity_calendar_new_event.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <androidx.constraintlayout.widget.ConstraintLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
+    android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".CalendarNewEvent">
 
@@ -99,3 +100,4 @@ tools:context=".CalendarNewEvent">
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
