--- a/app/src/main/res/layout/activity_notes_general.xml
+++ b/app/src/main/res/layout/activity_notes_general.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NotesGeneral">
@@ -48,4 +51,4 @@
         app:layout_constraintBottom_toTopOf="@+id/notes_general_New_btn"
         app:layout_constraintTop_toBottomOf="@+id/notes_general_textInputLayout"
         tools:layout_editor_absoluteX="0dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout></androidx.core.widget.NestedScrollView>
