--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -14,22 +14,10 @@
         android:id="@+id/agenda_Calendar_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="56dp"
         android:text="@string/str_agenda_Calendar"
-        app:layout_constraintEnd_toStartOf="@+id/agenda_ToDoList_btn"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_agenda" />
-
-    <Button
-        android:id="@+id/agenda_ToDoList_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:text="@string/str_agenda_TodoList"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/agenda_Calendar_btn"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_agenda" />
 
     <Button
@@ -51,6 +39,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/agenda_Notes_btn"
-        app:layout_constraintTop_toBottomOf="@+id/agenda_ToDoList_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/agenda_Calendar_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
