--- a/app/src/main/res/layout/activity_crops_detailed_edit.xml
+++ b/app/src/main/res/layout/activity_crops_detailed_edit.xml
@@ -1,12 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?><androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_height="match_parent"
-    tools:context=".CropsDetailedEdit">
+    tools:context=".CropsDetailedEdit"
+    android:layout_width="match_parent">
 
     <include
         android:id="@+id/toolbar_crops_detailed_edit"
@@ -71,4 +74,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_crops_detailed_edit" />
 
-</androidx.constraintlayout.widget.ConstraintLayout></androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
