--- a/app/src/main/res/layout/activity_weather_forecast.xml
+++ b/app/src/main/res/layout/activity_weather_forecast.xml
@@ -19,16 +19,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
             android:ems="10"
             android:hint="Enter City Name"
             android:inputType="textPersonName"
             android:paddingLeft="15dp"
-            android:textColor="#FF000000"
-            android:textColorHint="#FF000000"
+            android:textColor="#6E6C6C"
+            android:textColorHint="#6E6C6C"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
